--- a/packages/base-gui.org
+++ b/packages/base-gui.org
@@ -9,7 +9,6 @@
 | pacman   | xorg-xprop             | N.A.                                    | property displayer for xorg                                      |
 | pacman   | xclip                  | N.A.                                    | clipboard manageer for xorg                                      |
 | pacman   | xterm                  | N.A.                                    | a simple terminal                                                |
-| suckless | st                     | git://git.suckless.org/st               | THE simple terminal                                              |
 | git      | theterm                | https://github.com/Naheel-Azawy/theterm | a wrapper to give the terminal super powers                      |
 | aur      | ttf-symbola            | N.A.                                    | unicode symbols and emojis                                       |
 | pacman   | ttf-liberation         | N.A.                                    | another pretty font                                              |
@@ -63,7 +62,7 @@
 | pacman   | onboard                | N.A.                                    | on-screen keyboard                                               |
 | git      | prayer                 | https://github.com/Naheel-Azawy/prayer  | CLI prayer time                                                  |
 | aur      | btop-git               | N.A.                                    | a nice system monitor                                            |
-| aur      | dragon-drop            |                                         | drag and drop                                                    |
+| aur      | dragon-drop            | N.A.                                    | drag and drop                                                    |
 | pacman   | acpilight              | N.A.                                    | brightness control                                               |
 | pacman   | udisks2                | N.A.                                    | nice disks management                                            |
 | pacman   | ueberzug               | N.A.                                    | image previews in the terminal                                   |
@@ -82,5 +81,6 @@
 | pacman   | bluez                  | N.A.                                    | bluetooth service                                                |
 | pacman   | blueman                | N.A.                                    | bluetooth gui frontend                                           |
 | aur      | highlight-pointer      | N.A.                                    | red pointer for presentations                                    |
+| pacman   | vala                   | N.A.                                    | Vala language                                                    |
 | git      | gmenu                  | https://github.com/Naheel-Azawy/gmenu   | GTK dmenu                                                        |
 | git      | gtrm                   | https://github.com/Naheel-Azawy/gtrm    | GTK-VTE terminal                                                 |
